--- a/src/styles.css
+++ b/src/styles.css
@@ -354,3 +354,34 @@ p {
 .shopping-cart {
   display: grid;
 }
+/**
+* ! Style rules for sidebar
+**/
+.sidebar {
+  position: fixed;
+  right: -0.5em;
+  transition: 0.5s;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  position: absolute;
+  top: 10vh;
+  width: 100%;
+  height: 100vh;
+  min-height: 100vh;
+  background-color: #283618;
+  transition: 0.4s ease;
+  opacity: 0.8;
+}
+
+.sidebar.open {
+  width: 230px;
+  
+}
+
+.sidebar.close {
+  width: 0px;
+  
+}
