--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /**
-* ? Baseline styles
+* ! ******Baseline styles*********
 **/
 
 * {
@@ -11,25 +11,28 @@
 }
 
 body {
+  /* background-image: url(../public/assets/img-9.png);
+  background-size: cover;
+  background-position: center; */
   width: 100%;
   font-size: 16px;
   height: 100vh;
   min-height: 100vh;
   background-color: #ecf1f5;
-  font-family: arial, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /**
-* ! Styles for header, container, navbar ..
+* ! ********Styles for header, container..************
 **/
 .header {
-  position: fixed;
+  position: sticky;
   background: #283618;
   width: 100%;
   height: 5em;
   display: flex;
   justify-content: space-between;
-  align-items: first baseline;
+  align-items: center;
   top: 0px;
   left: 0px;
 }
@@ -38,12 +41,11 @@ body {
   box-sizing: border-box;
   display: flex;
   flex-wrap: nowrap;
-  align-items: first baseline;
-  position: relative;
+  align-items: last baseline;
 }
 
 /**
-* ! Navigation styles for open or close screen width
+* ! Media query styles for Navigation for open or close screen width
 **/
 
 @media (max-width: 1000px) {
@@ -51,28 +53,12 @@ body {
     display: none;
   }
 
-  .menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    position: absolute;
-    top: 11vh;
-    width: 100%;
-    height: 100vh;
-    min-height: 100vh;
-    right: -10.6em;
-    background-color: #283618;
-    transition: 0.4s ease;
-    opacity: 0.8;
-  }
-
+  
   .menu-list:last-child {
     padding-bottom: 3em;
   }
 
   .shop {
-    overflow-x: hidden;
     min-width: 80%;
   }
 }
@@ -86,17 +72,18 @@ body {
   cursor: pointer;
 }
 /**
-* ! hide the nav icon at 800px
+* ! *******media query for Nav icon at 800px********
 **/
+@media (max-width: 1000px) {
+.nav-item {
+  display: none;
+}
+}
+
 @media (min-width: 1000px) {
   .navigation {
     display: none;
   }
-}
-
-.slide {
-  left: -100%;
-  right: -100%;
 }
 
 .menu-list {
@@ -104,12 +91,10 @@ body {
   align-items: center;
   flex-wrap: nowrap;
   width: auto;
-  margin-right: 30px;
-  /* overflow-y: hidden; */
 }
 
 /**
-* ! Cart styling...
+* ! *************Cart style rules...*************
 **/
 
 .bi-cart2 {
@@ -125,7 +110,6 @@ body {
   height: 40px;
   border-radius: 3px;
   margin-top: 25px;
-  margin-right: 15px;
   display: flex;
 }
 
@@ -139,11 +123,16 @@ body {
   color: #fff;
 }
 
-.logo h1 a {
-  color: #fff;
-  font-family: sans-serif;
-  font-size: 30px;
-  margin-left: 30px;
+
+/**
+* ! **********style rules for logo, nav-links***********
+**/
+
+.logo img {
+  /* background-color: #ffffff; */
+  margin-left: 20px;
+  /* border-radius: 5px; */
+  margin-top: 10px;
 }
 
 .nav-link {
@@ -161,36 +150,17 @@ body {
   transition: 0.5s;
 }
 
-input[type="radio"] {
-  display: none;
+.nav-link:last-child {
+  margin-right: 20px;
 }
-
-input[type="submit"] {
-  cursor: pointer;
+.nav-link:first-child {
+  margin-left: 20px;
 }
 
 /**
-* ?  base styles for h1, h2 etc....
+* !  ******base style rules for fieldset, label, forms, inputs/textarea h1, h2 etc....******
 **/
 
-/* .welcome {
-  margin: 0 auto;
-  width: 60vw;
-  max-width: 500px;
-  min-width: 300px;
-} */
-
-.login {
-  margin: 0 auto;
-  width: 60vw;
-  max-width: 500px;
-  min-width: 300px;
-}
-
-/* .welcome > h2 h3 h4 p{
-  margin-top: 15px;
-  text-align: center;
-} */
 form {
   width: 60vw;
   max-width: 500px;
@@ -246,8 +216,16 @@ input[type="submit"] {
   color: white;
 }
 
+input[type="radio"] {
+  display: none;
+}
+
+input[type="submit"] {
+  cursor: pointer;
+}
+
 /** 
-* !shop items styles for specific screen width are here
+* ! ******shop items styles for specific screen width are here******
 **/
 
 .shop {
@@ -289,64 +267,57 @@ input[type="submit"] {
   }
 }
 
-.item {
-  border: 1px solid gray;
-  border-radius: 2px;
+.shopping-cart {
+  display: grid;
 }
 
-.item img {
-  border-radius: 4px none;
-}
-
-.details {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  gap: 10px;
-  background-color: rgb(240, 248, 248);
-}
-
-.price-quantity {
+/* .price-quantity {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: first baseline;
-}
-
-.buttons {
-  display: flex;
-  justify-content: space-between;
-  gap: 8px;
-}
-
-.quantity {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 5px;
-}
-
-.bi-dash-lg {
-  color: red;
-}
-.bi-plus-lg {
-  color: green;
-}
+} */
 
 /**
-* ! style rules for login page
+* ! *******style rules for login page*********
 **/
 
 .login {
-  margin-top: 120px;
+  margin: 0 auto;
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+}
+#log-img {
+  width: 100%;
+  height: 50%;
+  margin: 0 auto;
+  object-position: center;
 }
 
-.login h1,
+#log-img1 {
+  position: -webkit-sticky;
+  margin-top: -30vw;
+  width: 100vw;
+  height: 40vw;
+  object-position: center;
+  margin-bottom: 5px;
+}
+
+.login {
+  margin-top: 40px;
+}
+label{
+  color: #283618;
+}
+
+h1,
 h2,
 h3,
 p {
   text-align: center;
-  margin-bottom: 15px;
+  color: #283618;
+  /* margin-bottom: 15px; */
 }
 
 #header-login {
@@ -354,7 +325,7 @@ p {
 }
 
 /**
-* ! style rules for registration page
+* ! ************style rules for registration page***********
 **/
 
 #header-reg {
@@ -362,23 +333,27 @@ p {
 }
 
 .register {
-  margin-top: 120px;
+  margin-top: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
 }
 
 #reg-img {
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  margin-bottom: 5px;
 }
 
-.shopping-cart {
-  display: grid;
-}
 /**
-* ! Style rules for sidebar
+* ! ************Style rules for sidebar********************
 **/
 .sidebar {
   position: fixed;
-  right: -0.9em;
+  right: 0.0em;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
@@ -411,10 +386,195 @@ p {
 }
 .sidebar.open {
   width: 250px;
-  
 }
 
 .sidebar.close {
   width: 0px;
+}
+
+/**
+* ! ***********style rules for sweet alert success************
+**/
+
+.swal2-popup {
+  font-size: 1rem !important;
+}
+
+.swal2-title {
+  color: #283618 !important;
+}
+
+.swal2-confirm-button {
+  background-color: #283618 !important;
+}
+
+/**
+* ! style rules for sweetalert failure
+**/
+
+.my-swal .swal2-popup {
+  font-size: 1.6rem !important;
+}
+
+.my-swal .swal2-title {
+  color: #283618 !important;
+}
+
+.my-swal .swal2-confirm-button {
+  background-color: #283618 !important;
+  color: #283618 !important;
+}
+
+/**
+* ! style for products card items
+**/
+
+.card {
+  position: inherit;
+  width: 200px;
+  height: 350px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+
+.card img {
+  width: 100%;
+  height: 50%;
+  overflow-x: hidden;
+}
+
+.buttons {
+  width: 90%;
+  margin: 0 auto;
+  height: 10%px;
+  margin-top: 15px;
+  background-color: #f3f3ec;
+  color: rgb(14, 14, 14);
+  border: none;
+  border-radius: 5vw;
+  align-items: center;
+  padding: 5px;
   
+}
+
+.info {
+  margin-top: 8px;
+  height: 50%;
+}
+.info p {
+  margin: 0;
+  padding: 0 10px;
+  font-size: 1.0rem;
+  text-align: justify;
+}
+
+.bi-cart4{
+  color: #5e8a2c;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-around;
+  gap: 7px;
+}
+
+.quantity {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+}
+
+.bi-dash-lg {
+  color: red;
+}
+.bi-plus-lg {
+  color: green;
+}
+
+
+/**
+* ! ***********Style rules for user profile page************
+**/
+
+.user-profile {
+  margin-top: 70px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.user-profile form {
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding-bottom: 2em;
+}
+
+.user-profile label {
+  display: block;
+  margin: 0.5rem 0;
+  color: #283618;
+}
+
+input,
+textarea {
+  margin: 10px 0 0 0;
+  padding: 0.7em;
+  width: 100%;
+  min-height: 2.3em;
+  border-radius: 3px;
+  background-color: #fff;
+  border: 1px solid #283618;
+  color: #000;
+}
+
+.user-profile input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.3em;
+  background-color: #283618;
+  border-color: white;
+  min-width: 300px;
+  border-radius: 7px;
+  color: white;
+}
+
+/**
+* ! ******* styles for footer go here ********
+**/
+
+.footer {
+  background-color: #b8b8b8;
+  height: 20vh;
+  width: 100%;
+  display: flex;
+  text-transform: uppercase;
+  font-size: small;
+  justify-content: space-evenly;
+  align-items: center;
+  display: flex;
+}
+
+.footer-dir {
+  text-decoration: none;
+  color: white;
+  font-weight: 30px;
+}
+/* .bi-facebook, .bi-instagram, .bi-twitter, .bi-youtube {
+  color: white; 
+}*/
+
+.socials {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 20%;
 }
