--- a/src/styles.css
+++ b/src/styles.css
@@ -11,9 +11,6 @@
 }
 
 body {
-  /* background-image: url(../public/assets/img-9.png);
-  background-size: cover;
-  background-position: center; */
   width: 100%;
   font-size: 16px;
   height: 100vh;
@@ -113,6 +110,29 @@ body {
   display: flex;
 }
 
+.cart-item {
+  width: 50%
+}
+
+.cart-item button{
+  background-color: #283618;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
+  margin-left: 5px;
+  cursor: pointer;
+  margin: 10px;
+}
+.cart_item_img {
+  width: 50%;
+  margin-right: 10px;
+}
+
+.cart_item-img {
+  width: 100%;
+  margin-right: 10px;
+}
 .cartAmount {
   background-color: red;
   padding: 2px;
@@ -123,6 +143,27 @@ body {
   color: #fff;
 }
 
+.cart-grid {
+  margin: 25px auto;
+  display: grid;
+  position: inherit;
+  width: 350px;
+  height: 200px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.cart-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  height: 100%;
+  align-items: center;
+}
 
 /**
 * ! **********style rules for logo, nav-links***********
@@ -349,7 +390,7 @@ p {
 }
 
 /**
-* ! ************Style rules for sidebar********************
+* ! ************Style rules for SIDEBAR********************
 **/
 .sidebar {
   position: fixed;
@@ -362,8 +403,8 @@ p {
   position: absolute;
   top: 10vh;
   width: 100%;
-  height: 100vh;
-  min-height: 100vh;
+  height: 90vh;
+  min-height: 90vh;
   background-color: #283618;
   transition: 0.4s ease;
   opacity: 0.8;
@@ -547,29 +588,37 @@ textarea {
   color: white;
 }
 
+.error{
+  color: red;
+  display: flex;
+  gap: 0.3em;
+  align-items: center;
+}
+
 /**
 * ! ******* styles for footer go here ********
 **/
 
 .footer {
-  background-color: #b8b8b8;
-  height: 20vh;
+  background-color: #6b755f;
+  height: 15vh;
   width: 100%;
   display: flex;
   text-transform: uppercase;
   font-size: small;
   justify-content: space-evenly;
   align-items: center;
-  display: flex;
+  margin-bottom: -1.7em;
 }
 
 .footer-dir p {
   text-decoration: none;
   color: white;
-  font-weight: 30px;
+  font-weight: 16px;
 }
 
 .socials {
+  position: relative;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -577,13 +626,7 @@ textarea {
 }
 
 .socials i {
-  font-size: 20px;
+  font-size: 15px;
   color: white;
 }
 
-.error{
-  color: red;
-  display: flex;
-  gap: 0.3em;
-  align-items: center;
-}
