--- a/src/styles.css
+++ b/src/styles.css
@@ -100,6 +100,24 @@ body {
   color: #000;
 }
 
+.top-cart{
+  margin-top: 20px;
+}
+
+.top-cart-but {
+  display: block;
+  width: 8%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.0em;
+  background-color: #283618;
+  border-color: white;
+  min-width: 130px;
+  border-radius: 7px;
+  color: white;
+  cursor: pointer;
+}
+
 .cart {
   position: relative;
   background-color: white;
